--- a/app/src/main/res/layout/advdialog.xml
+++ b/app/src/main/res/layout/advdialog.xml
@@ -32,18 +32,19 @@
             android:layout_width="50dp"
             android:layout_height="48dp"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="140dp"
             android:layout_marginRight="140dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.166"
             app:layout_constraintStart_toEndOf="@+id/indoor"
             app:layout_constraintTop_toBottomOf="@+id/edibleSwitch"
             tools:ignore="DuplicateSpeakableTextCheck" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/indoor"
-            android:layout_width="180dp"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -51,7 +52,6 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edibleView" />
@@ -60,10 +60,11 @@
             android:id="@+id/droughtSpin"
             android:layout_width="190dp"
             android:layout_height="48dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="4dp"
             android:background="@color/white"
             android:spinnerMode="dropdown"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.032"
             app:layout_constraintStart_toEndOf="@+id/droughtView"
             app:layout_constraintTop_toBottomOf="@+id/bloomSpin"
             tools:ignore="SpeakableTextPresentCheck" />
@@ -72,18 +73,19 @@
             android:id="@+id/durationSpin"
             android:layout_width="190dp"
             android:layout_height="48dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="4dp"
             android:background="@color/white"
             android:spinnerMode="dropdown"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.203"
             app:layout_constraintStart_toEndOf="@+id/durationView"
             app:layout_constraintTop_toBottomOf="@+id/droughtSpin"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/durationView"
-            android:layout_width="180dp"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -91,15 +93,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/droughtView" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/stateView"
-            android:layout_width="180dp"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -107,15 +108,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/name_run" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/edibleView"
-            android:layout_width="180dp"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -123,15 +123,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/commercialView" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/droughtView"
-            android:layout_width="180dp"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -139,15 +138,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="18dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bloomView" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/commercialView"
-            android:layout_width="180dp"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -155,15 +153,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="18dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/durationView" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/bloomView"
-            android:layout_width="180dp"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -171,15 +168,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/seasonView" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/seasonView"
-            android:layout_width="180dp"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -187,7 +183,6 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/typeView" />
@@ -196,9 +191,10 @@
             android:id="@+id/commSpin"
             android:layout_width="190dp"
             android:layout_height="48dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="4dp"
             android:background="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintStart_toEndOf="@+id/commercialView"
             app:layout_constraintTop_toBottomOf="@+id/durationSpin"
             tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />
@@ -211,6 +207,7 @@
             android:background="@color/white"
             android:spinnerMode="dropdown"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/bloomView"
             app:layout_constraintTop_toBottomOf="@+id/seasonSpinner"
             tools:ignore="SpeakableTextPresentCheck" />
@@ -219,10 +216,11 @@
             android:id="@+id/spinner_type"
             android:layout_width="190dp"
             android:layout_height="48dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="4dp"
             android:background="@color/white"
             android:spinnerMode="dropdown"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.181"
             app:layout_constraintStart_toEndOf="@+id/typeView"
             app:layout_constraintTop_toBottomOf="@+id/spinner_state"
             tools:ignore="SpeakableTextPresentCheck" />
@@ -231,26 +229,28 @@
             android:id="@+id/seasonSpinner"
             android:layout_width="190dp"
             android:layout_height="48dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="4dp"
             android:background="@color/white"
             android:spinnerMode="dropdown"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.203"
             app:layout_constraintStart_toEndOf="@+id/seasonView"
             app:layout_constraintTop_toBottomOf="@+id/spinner_type"
             tools:ignore="SpeakableTextPresentCheck" />
+
 
         <Switch
             android:id="@+id/edibleSwitch"
             android:layout_width="50dp"
             android:layout_height="48dp"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="140dp"
             android:layout_marginRight="140dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.166"
             app:layout_constraintStart_toEndOf="@+id/edibleView"
             app:layout_constraintTop_toBottomOf="@+id/commSpin" />
-
 
         <EditText
             android:id="@+id/name_input"
@@ -263,15 +263,15 @@
             android:inputType="textPersonName"
             android:paddingLeft="5dp"
             android:textColorHint="#757575"
-            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.203"
             app:layout_constraintStart_toEndOf="@+id/name_run"
             app:layout_constraintTop_toBottomOf="@+id/filter_run" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/name_run"
-            android:layout_width="180dp"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="16dp"
@@ -280,15 +280,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/filter_run" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/typeView"
-            android:layout_width="180dp"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -296,7 +295,6 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/stateView" />
@@ -305,11 +303,12 @@
             android:id="@+id/spinner_state"
             android:layout_width="190dp"
             android:layout_height="48dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="4dp"
             android:background="@color/white"
             android:ems="10"
             android:spinnerMode="dropdown"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.203"
             app:layout_constraintStart_toEndOf="@+id/stateView"
             app:layout_constraintTop_toBottomOf="@+id/name_input"
             tools:ignore="SpeakableTextPresentCheck" />
@@ -326,7 +325,6 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -347,7 +345,7 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="#000000"
-            android:textSize="14dp"
+            android:textSize="10dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -356,17 +354,17 @@
 
         <TextView
             android:id="@+id/filter_run"
-            android:layout_width="179dp"
-            android:layout_height="47dp"
+            android:layout_width="108dp"
+            android:layout_height="31dp"
             android:layout_marginStart="24dp"
             android:layout_marginLeft="24dp"
             android:layout_marginTop="16dp"
             android:layout_weight="1"
             android:ems="10"
+            android:includeFontPadding="false"
             android:text="Filter Run"
+            android:textAppearance="@style/CustomTextTitle"
             android:textColor="#035405"
-            android:textSize="40dp"
-            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
