--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,14 +23,15 @@
         <item name="android:textColor">@color/white</item>
         <item name="customTextBack">#358856</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:textSize">20dp</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:textAllCaps">true</item>
     </style>
 
     <style name="CustomTextData" parent="@android:style/TextAppearance.Widget.TextView">
         <item name="android:textColor">@color/dark_green</item>
         <item name="customTextBack">@color/gradient_green</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:textSize">18dp</item>
+        <item name="android:textSize">12dp</item>
     </style>
 
 </resources>
