--- a/app/src/main/res/layout/activity_search_plants.xml
+++ b/app/src/main/res/layout/activity_search_plants.xml
@@ -21,15 +21,17 @@
             android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/leaf_bg"
             tools:ignore="ImageContrastCheck" />
 
         <Switch
             android:id="@+id/indoorSwitch"
             android:layout_width="50dp"
-            android:layout_height="48dp"
+            android:layout_height="50dp"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="140dp"
@@ -41,24 +43,23 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/indoor"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="20dp"
             android:background="@color/tree_green"
             android:text="@string/indoors"
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edibleView" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/durationView"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -66,15 +67,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/droughtView" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/stateView"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -82,15 +82,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/name_run" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/edibleView"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -98,15 +97,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/commercialView" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/droughtView"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -114,15 +112,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="18dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bloomView" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/commercialView"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -130,15 +127,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="18dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/durationView" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/bloomView"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -146,15 +142,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/seasonView" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/seasonView"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -162,7 +157,6 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/typeView" />
@@ -170,7 +164,7 @@
         <Spinner
             android:id="@+id/spinner_type"
             android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_height="35dp"
             android:layout_marginTop="5dp"
             android:background="@color/white"
             android:spinnerMode="dropdown"
@@ -183,7 +177,7 @@
         <Spinner
             android:id="@+id/commSpin"
             android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_height="35dp"
             android:layout_marginTop="5dp"
             android:background="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
@@ -195,7 +189,7 @@
         <Spinner
             android:id="@+id/durationSpin"
             android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_height="35dp"
             android:layout_marginTop="5dp"
             android:background="@color/white"
             android:spinnerMode="dropdown"
@@ -208,7 +202,7 @@
         <Spinner
             android:id="@+id/droughtSpin"
             android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_height="35dp"
             android:layout_marginTop="5dp"
             android:background="@color/white"
             android:spinnerMode="dropdown"
@@ -221,7 +215,7 @@
         <Spinner
             android:id="@+id/bloomSpin"
             android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_height="35dp"
             android:layout_marginTop="5dp"
             android:background="@color/white"
             android:spinnerMode="dropdown"
@@ -234,7 +228,7 @@
         <Spinner
             android:id="@+id/seasonSpinner"
             android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_height="35dp"
             android:layout_marginTop="5dp"
             android:background="@color/white"
             android:spinnerMode="dropdown"
@@ -247,7 +241,7 @@
         <Switch
             android:id="@+id/edibleSwitch"
             android:layout_width="50dp"
-            android:layout_height="48dp"
+            android:layout_height="50dp"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="140dp"
@@ -260,7 +254,7 @@
         <EditText
             android:id="@+id/name_input"
             android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_height="35dp"
             android:layout_marginTop="8dp"
             android:background="@color/white"
             android:ems="10"
@@ -268,7 +262,6 @@
             android:inputType="textPersonName"
             android:paddingLeft="5dp"
             android:textColorHint="#757575"
-            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.285"
             app:layout_constraintStart_toEndOf="@+id/name_run"
@@ -276,8 +269,8 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/name_run"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="8dp"
@@ -286,15 +279,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/filter_run" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/typeView"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -302,7 +294,6 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/stateView" />
@@ -310,7 +301,7 @@
         <Spinner
             android:id="@+id/spinner_state"
             android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_height="35dp"
             android:layout_marginTop="5dp"
             android:background="@color/white"
             android:ems="10"
@@ -326,21 +317,20 @@
             android:layout_width="80dp"
             android:layout_height="49dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="5dp"
             android:layout_marginBottom="24dp"
             android:background="@drawable/button_colors"
             android:text="@string/go"
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/indoor"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@+id/indoorSwitch"
+            app:layout_constraintVertical_bias="0.108" />
 
         <TextView
             android:id="@+id/howTo"
@@ -353,17 +343,19 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="#000000"
-            android:textSize="14dp"
+            android:textSize="12dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.493"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/searchButton" />
+            app:layout_constraintTop_toBottomOf="@+id/searchButton"
+            app:layout_constraintVertical_bias="0.208" />
 
         <TextView
             android:id="@+id/filter_run"
-            android:layout_width="320dp"
-            android:layout_height="65dp"
+            android:layout_width="197dp"
+            android:layout_height="42dp"
             android:layout_marginStart="24dp"
             android:layout_marginLeft="24dp"
             android:layout_marginTop="16dp"
@@ -371,7 +363,7 @@
             android:ems="10"
             android:text="Search Plants"
             android:textColor="#035405"
-            android:textSize="49dp"
+            android:textSize="30dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
